# beryl

./: .gitignore  AGENTS.md  Cargo.toml
crates/beryl/: Cargo.toml
crates/beryl-app/: Cargo.toml
crates/beryl-app/doc/: design.md
crates/beryl-app/src/: appearance.rs  backend_failure.rs  beryl_home_dir.rs  diagnostic_child_control.rs  diagnostic_child_dynamic_tools.rs  diagnostic_child_protocol.rs  diagnostic_child_supervisor.rs  diagnostic_child_target.rs  diagnostic_dynamic_tools.rs  dynamic_tools.rs  graph_dynamic_tools.rs  graph_tools.rs  gui_control_dynamic_tools.rs  lib.rs  lifecycle_dynamic_tools.rs  member_thread_inventory.rs  memory_diagnostics.rs  persistence.rs  preferences.rs  settings_dynamic_tools.rs  shell.rs  startup_state.rs  text_input.rs  theme_dynamic_tools.rs  thread_start_options.rs  title_generation.rs  workspace_graph_commit.rs  workspace_image_assets.rs  workspace_persistence.rs
crates/beryl-app/src/appearance/: chrome.rs
crates/beryl-app/src/appearance/runtime/: from_theme.rs  mod.rs  to_theme.rs
crates/beryl-app/src/appearance/theme/: active.rs  diagnostics.rs  mod.rs  model.rs  resolver.rs
crates/beryl-app/src/diagnostic_child_supervisor/: launch.rs
crates/beryl-app/src/graph_dynamic_tools/: arguments.rs  schema.rs
crates/beryl-app/src/graph_tools/: mutation.rs  workspace_state.rs
crates/beryl-app/src/settings_dynamic_tools/: parser.rs  response.rs  schema.rs
crates/beryl-app/src/shell/: account_rate_limits.rs  backend_availability.rs  checklist_sidebar_panel_state.rs  checklist_sidebar_projection.rs  checklist_sidebar_visibility.rs  checklist_thread_menu.rs  column_selector.rs  composer_clipboard.rs  composer_draft.rs  composer_history.rs  composer_image_assets.rs  composer_image_delivery.rs  composer_image_label_scan.rs  composer_image_labels.rs  composer_measurement.rs  composer_submission.rs  composer_submit.rs  context_compaction.rs  diagnostics.rs  discovery.rs  dynamic_settings.rs  dynamic_theme.rs  dynamic_theme_worker.rs  execution_detail.rs  graph.rs  graph_link_menu.rs  graph_link_menu_state.rs  graph_node_action_policy.rs  graph_node_delete.rs  graph_thread_start.rs  graph_worker.rs  hard_stop.rs  hard_stop_targets.rs  image_preview_popup.rs  layout.rs  lifecycle.rs  lifecycle_continuation.rs  lifecycle_yield.rs  member_thread_inventory.rs  notification_policy.rs  (+55 more)
crates/beryl-app/src/shell/execution_detail/: transcript_images.rs
crates/beryl-app/src/shell/graph/: mutation.rs
crates/beryl-app/src/shell/render/: checklist_sidebar.rs  code_panel.rs  code_panel_projection_cache.rs  code_panel_syntax.rs  column_selector.rs  common.rs  conversation.rs  graph_link_menu.rs  graph_link_menu_rows.rs  graph_overlay.rs  scrollbars.rs  startup.rs  status_operation.rs  thread_selector.rs  transcript.rs  transcript_branch_menu.rs  workspace_picker.rs  workspace_picker_row_menu.rs
crates/beryl-app/src/shell/render_theme/: button.rs  frame.rs  role_style.rs
crates/beryl-app/src/shell/settings/: appearance.rs  developer_instructions.rs  notifications.rs  operations.rs  theme.rs  theme_editor.rs  themes.rs
crates/beryl-app/src/shell/syntax_highlighting/: cache.rs  ini.rs  json.rs  language.rs  markdown.rs  model.rs  toml.rs
crates/beryl-app/src/shell/thread_selector/: projection.rs
crates/beryl-app/src/shell/thread_title/: backend.rs  cleanup.rs  generated.rs  task.rs  types.rs  worker.rs
crates/beryl-app/src/shell/transcript_anchor/: markdown_layout.rs  window_measure.rs
crates/beryl-app/src/shell/transcript_markdown/: block_render.rs  cache.rs  code_panels.rs  inline_render.rs  ir.rs  list_layout.rs  parser.rs  parser_inline.rs  source_spans.rs
crates/beryl-app/src/shell/transcript_media/: cache.rs  load.rs  path_policy.rs  sizing.rs  types.rs
crates/beryl-app/src/shell/transcript_presentation/: identity.rs  metrics.rs  range.rs
crates/beryl-app/src/shell/transcript_selection/: copy_text.rs  hit_test.rs  word.rs
crates/beryl-app/src/shell/turn_worker/: approval.rs  lifecycle_yield.rs  thread_start.rs  title.rs
crates/beryl-app/src/shell/virtual_list/: element.rs  item.rs  layout_state.rs  mod.rs  scroll_state.rs  (+1 more)
crates/beryl-app/src/theme_dynamic_tools/: authoring.rs  parser.rs  response.rs  schema.rs  schema_output.rs  validation.rs
crates/beryl-app/tests/: activity_caret_blink.rs  app_bootstrap.rs  appearance_settings.rs  appearance_settings_window.rs  backend_availability.rs  backend_failure.rs  checklist_sidebar_panel_state.rs  checklist_sidebar_projection.rs  checklist_sidebar_visibility.rs  chrome_theme_source.rs  code_panel_projection_cache.rs  code_panel_syntax_boundary.rs  code_panel_syntax_projection.rs  code_panel_syntax_rendering.rs  column_selector.rs  composer_clipboard.rs  composer_draft.rs  composer_history.rs  composer_image_asset_worker.rs  composer_image_delivery.rs  composer_image_label_scan.rs  composer_image_labels.rs  composer_measurement_cache.rs  composer_submission.rs  composer_submit.rs  context_compaction.rs  conversation_execution.rs  conversation_layout.rs  conversation_shell_source.rs  developer_instructions_settings.rs  diagnostic_child_dynamic_tools.rs  diagnostic_child_protocol.rs  diagnostic_child_supervisor.rs  diagnostic_dynamic_tools.rs  graph_link_menu.rs  graph_node_action_policy.rs  graph_overlay.rs  graph_overlay_noop.rs  gui_control_dynamic_tools.rs  gui_preferences.rs  (+85 more)
crates/beryl-app/tests/support/: tempdir.rs
crates/beryl-backend/: Cargo.toml
crates/beryl-backend/doc/: design.md
crates/beryl-backend/src/: activity.rs  auth.rs  command.rs  discovery.rs  dynamic_tool.rs  hard_stop.rs  lib.rs  lifecycle_test_support.rs  managed_process.rs  protocol.rs  response_sanitizer.rs  server.rs  session.rs  thread_branch.rs  thread_history.rs  turn.rs  websocket_transport.rs
crates/beryl-backend/src/websocket_transport/: message.rs
crates/beryl-backend/tests/: launch_and_protocol.rs  managed_process_lifecycle.rs  managed_websocket.rs  turn_protocol.rs
crates/beryl/doc/: design.md
crates/beryl/src/: cli.rs  lib.rs  main.rs
crates/beryl/tests/: cli.rs
(+120 files in other folders)
