[workspace]
members = [
    "crates/beryl",
    "crates/beryl-app",
    "crates/beryl-backend",
    "crates/beryl-model",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
beryl-app = { path = "crates/beryl-app" }
beryl-backend = { path = "crates/beryl-backend" }
beryl-model = { path = "crates/beryl-model" }
clap = { version = "4.6.1", features = ["derive"] }
deunicode = "1.6.2"
getrandom = "0.4.2"
hex = "0.4.3"
gpui = { git = "https://github.com/berylorg/zed-fork.git", rev = "c70dbf5244396cea7e627a73ffdcf45f19c9642d", default-features = false, features = ["windows-manifest"] }
gpui-settings-window = { git = "https://github.com/berylorg/gpui-settings-window.git", rev = "c6973c27dd0f23259228914d680a313f665b3f36" }
gpui-text-input = { git = "https://github.com/berylorg/gpui-text-input.git", rev = "c076415e41804812cb031fbe41e8bffcfc8e0a3e" }
gpui_sum_tree = "0.2.2"
image = "0.25.1"
markdown = { version = "1.0.0", default-features = false }
once_cell = "1.21.4"
redb = "4.1.0"
regex = "1.12.3"
raw-window-handle = "0.6.2"
rodio = { version = "0.22.2", default-features = false, features = ["playback", "hound"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
soketto = { version = "0.8.1", default-features = false }
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "0.9.12"
tokio = { version = "1.52.1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["compat"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
unicode-segmentation = "1.12.0"
wait-timeout = "0.2.1"
windows = "0.61"
