[workspace]
members = [
    "crates/beryl",
    "crates/beryl-app",
    "crates/beryl-backend",
    "crates/beryl-model",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
beryl-app = { path = "crates/beryl-app" }
beryl-backend = { path = "crates/beryl-backend" }
beryl-model = { path = "crates/beryl-model" }
clap = { version = "4.6.1", features = ["derive"] }
deunicode = "1.6.2"
getrandom = "0.4.2"
hex = "0.4.3"
gpui = { git = "https://github.com/berylorg/zed-fork.git", rev = "fabbb607f5aff9e69ef6f09d423c5264bee4c9a8", default-features = false, features = ["windows-manifest"] }
gpui-scrollbar = { git = "https://github.com/berylorg/gpui-scrollbar.git", rev = "e5c46bacce26c86458f30e11d31b428282dad373" }
gpui-settings-window = { git = "https://github.com/berylorg/gpui-settings-window.git", rev = "a13aa8cd3fd1af0ebbce395ee1ed57d395963f8d" }
gpui-text-input = { git = "https://github.com/berylorg/gpui-text-input.git", rev = "dc38cfae5c68a988da773ca6d47a013994a66de9" }
gpui_sum_tree = "0.2.2"
image = "0.25.1"
jsonc-parser = { version = "0.32.4", default-features = false }
markdown = { version = "1.0.0", default-features = false }
once_cell = "1.21.4"
redb = "4.1.0"
regex = "1.12.3"
raw-window-handle = "0.6.2"
rodio = { version = "0.22.2", default-features = false, features = ["playback", "hound"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
soketto = { version = "0.8.1", default-features = false }
tempfile = "3.27.0"
taplo = { version = "0.14.0", default-features = false }
thiserror = "2.0.18"
toml = "0.9.12"
tokio = { version = "1.52.1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["compat"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
unicode-segmentation = "1.12.0"
wait-timeout = "0.2.1"
windows = "0.61"
