[package]
name = "beryl-app"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
beryl-backend.workspace = true
beryl-model.workspace = true
gpui.workspace = true
gpui-settings-window.workspace = true
gpui-text-input.workspace = true
image.workspace = true
jsonc-parser.workspace = true
markdown.workspace = true
gpui_sum_tree.workspace = true
once_cell.workspace = true
redb.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
taplo.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle.workspace = true
rodio.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
